--- a/index.html
+++ b/index.html
@@ -89,10 +89,7 @@
                   <a href="#products_section3">منتجات منزلية</a>
                   <a href="#products_section4">هــدايـا</a>
                   <div style="display: flex; justify-content: center; padding-right: 10px;" href="">
-                     <a style="padding: 10px;" href="#" target="_blank"><i class="fa-brands fa-facebook-f"></i></a>
-                     <a style="padding: 10px;" href="#" target="_blank"><i class="fa-brands fa-twitter"></i></a>
-                     <a style="padding: 10px;" href="#" target="_blank"><i class="fa-brands fa-instagram"></i></a>
-                     <a style="padding: 10px;" href="#" target="_blank"><i class="fa-brands fa-tiktok"></i></a>
+                     <a style="padding: 10px;" href="https://www.facebook.com/algerdz123" target="_blank"><i class="fa-brands fa-facebook-f"></i></a>
                   </div>
                </div>
                <span class="toggle_icon" onclick="openNav()"><i style="font-size: 40px;"
