--- a/index.html
+++ b/index.html
@@ -161,173 +161,172 @@
 
 
 
-   <!-- بداية تصنيف هدايا  -->
+<!-- بداية تصنيف هدايا  -->
 
-   <div class="fashion_section" id="products_section2">
-      <div id="main_slider" class="carousel slide" data-ride="carousel">
-         <div class="carousel-inner">
-            <div class="carousel-item active">
-               <div class="container">
-                  <h1 class="fashion_taital">هــدايـا</h1>
-                  <div class="fashion_section_2">
-                     <div class="cards">
+<div class="fashion_section" id="products_section2">
+<div id="main_slider" class="carousel slide" data-ride="carousel">
+<div class="carousel-inner">
+<div class="carousel-item active">
+<div class="container">
+<h1 class="fashion_taital">هــدايـا</h1>
+<div class="fashion_section_2">
+<div class="cards">
 
-                        <!-- بدابة اظافة المنتجات    -->
+<!-- بدابة اظافة المنتجات    -->
 
-                        <!-- بداية المنتج  -->
-                        <div class="card">
-                           <h4 class="shirt_text">Light colours</h4>
-                           <div class="image">
-                              <img src="images/pro1.jpg">
-                           </div>
-                           <div class="info" dir="rtl">
-                              <h3>السعر : <span>1500 دج</span></h3>
-                              <p style="text-decoration: line-through;">1900 دج</p>
-                           </div>
-                           <div class="description">
-                           </div>
-                           <div class="btn_main">
-                              <button class="btn-order" onclick="orderNow(
-'Light colours',
+<!-- بداية المنتج  -->
+<div class="card">
+<h4 class="shirt_text">نبولة الضوء</h4>
+<div class="image">
+<img src="images/pro1.jpg">
+</div>
+<div class="info" dir="rtl">
+<h3>السعر : <span>1000 دج</span></h3><p style="text-decoration: line-through;">1400 دج</p>
+</div>
+<div class="description">
+</div>
+<div class="btn_main">
+<button class="btn-order" onclick="orderNow(
+'نبولة الضوء',
 '1000',
 'الوصف',
 'images/pro1.jpg')">
-                                 <i class="animation"></i>أطلب الآن<i class="animation"></i>
-                              </button>
-                           </div>
-                        </div>
-                        <!-- نهاية المنتج  -->
+<i class="animation"></i>أطلب الآن<i class="animation"></i>
+</button>
+</div>
+</div>
+<!-- نهاية المنتج  -->
 
 
-                        <!-- بداية المنتج  -->
-                        <div class="card">
-                           <h4 class="shirt_text">CUP je t'aime</h4>
-                           <div class="image">
-                              <img src="images/pro4.png">
-                           </div>
-                           <div class="info" dir="rtl">
-                              <h3>السعر : <span>2750 دج</span></h3>
-                              <p style="text-decoration: line-through;">3100 دج</p>
-                           </div>
-                           <div class="description">
-                           </div>
-                           <div class="btn_main">
-                              <button class="btn-order" onclick="orderNow(
+<!-- بداية المنتج  -->
+<div class="card">
+<h4 class="shirt_text">CUP je t'aime</h4>
+<div class="image">
+<img src="images/pro4.png">
+</div>
+<div class="info" dir="rtl">
+<h3>السعر : <span>900 دج</span></h3>
+<p style="text-decoration: line-through;">1300 دج</p>
+</div>
+<div class="description">
+</div>
+<div class="btn_main">
+<button class="btn-order" onclick="orderNow(
 'CUP je taime',
-'2750',
+'900',
 'الوصف',
 'images/pro4.png')">
-                                 <i class="animation"></i>أطلب الآن<i class="animation"></i>
-                              </button>
-                           </div>
-                        </div>
-                        <!-- نهاية المنتج  -->
+<i class="animation"></i>أطلب الآن<i class="animation"></i>
+</button>
+</div>
+</div>
+<!-- نهاية المنتج  -->
 
-                        <!-- بداية المنتج  -->
-                        <div class="card">
-                           <h4 class="shirt_text">هدية 03</h4>
-                           <div class="image">
-                              <img src="images/p3.jpg">
-                           </div>
-                           <div class="info" dir="rtl">
-                              <h3>السعر : <span>2750 دج</span></h3>
-                              <p style="text-decoration: line-through;">3100 دج</p>
-                           </div>
-                           <div class="description">
-                           </div>
-                           <div class="btn_main">
-                              <button class="btn-order" onclick="orderNow(
-'هدية 03',
-'2750',
+<!-- بداية المنتج  -->
+<div class="card">
+<h4 class="shirt_text">دبدبوب ستيتش</h4>
+<div class="image">
+<img src="images/p3.jpg">
+</div>
+<div class="info" dir="rtl">
+<h3>السعر : <span>900 دج</span></h3>
+<p style="text-decoration: line-through;">1200 دج</p>
+</div>
+ <div class="description">
+</div>
+<div class="btn_main">
+<button class="btn-order" onclick="orderNow(
+'دبدبوب ستيتش',
+'900',
 'الوصف',
 'images/p3.jpg')">
-                                 <i class="animation"></i>أطلب الآن<i class="animation"></i>
-                              </button>
-                           </div>
-                        </div>
-                        <!-- نهاية المنتج  -->
+<i class="animation"></i>أطلب الآن<i class="animation"></i>
+</button>
+</div>
+</div>
+<!-- نهاية المنتج  -->
 
-                        <!-- نهاية التصنيف -->
-                     </div>
-                  </div>
-               </div>
-            </div>
-         </div>
-      </div>
-   </div>
-   <!--نهاية تصنيف  هدايا  -->
+<!-- نهاية التصنيف -->
+</div>
+</div>
+</div>
+</div>
+</div>
+</div>
+</div>
+<!--نهاية تصنيف  هدايا  -->
 
 
    <!-- بداية تصنيف منتجات منوعة  -->
 
-   <div class="fashion_section" id="products_section3">
-      <div id="main_slider" class="carousel slide" data-ride="carousel">
-         <div class="carousel-inner">
-            <div class="carousel-item active">
-               <div class="container">
-                  <h1 class="fashion_taital">منتجات منوعة</h1>
-                  <div class="fashion_section_2">
-                     <div class="cards">
+<div class="fashion_section" id="products_section3">
+<div id="main_slider" class="carousel slide" data-ride="carousel">
+<div class="carousel-inner">
+<div class="carousel-item active">
+<div class="container">
+<h1 class="fashion_taital">منتجات منوعة</h1>
+<div class="fashion_section_2">
+<div class="cards">
 
-                        <!-- بدابة اظافة المنتجات    -->
+<!-- بدابة اظافة المنتجات    -->
 
 
-                        <!-- بداية المنتج  -->
-                        <div class="card">
-                           <h4 class="shirt_text">product 01</h4>
-                           <div class="image">
-                              <img src="images/pro3.png">
-                           </div>
-                           <div class="info" dir="rtl">
-                              <h3>السعر : <span>2500 دج</span></h3>
-                              <p style="text-decoration: line-through;">3000 دج</p>
-                           </div>
-                           <div class="description">
-                           </div>
-                           <div class="btn_main">
-                              <button class="btn-order" onclick="orderNow(
-'product 01',
+<!-- بداية المنتج  -->
+<div class="card">
+<h4 class="shirt_text">صاك 01</h4>
+<div class="image">
+<img src="images/pro3.png">
+</div>
+<div class="info" dir="rtl">
+<h3>السعر : <span>2500 دج</span></h3>
+<p style="text-decoration: line-through;">3000 دج</p>
+</div>
+<div class="description">
+</div>
+<div class="btn_main">
+<button class="btn-order" onclick="orderNow(
+'صاك 01',
 '2500',
 'الوصف',
 'images/pro3.png')">
-                                 <i class="animation"></i>أطلب الآن<i class="animation"></i>
-                              </button>
-                           </div>
-                        </div>
-                        <!-- نهاية المنتج  -->
+<i class="animation"></i>أطلب الآن<i class="animation"></i>
+</button>
+</div>
+</div>
+<!-- نهاية المنتج  -->
 
-                        <!-- بداية المنتج  -->
-                        <div class="card">
-                           <h4 class="shirt_text">product 02</h4>
-                           <div class="image">
-                              <img src="images/p4.jpg">
-                           </div>
-                           <div class="info" dir="rtl">
-                              <h3>السعر : <span>2500 دج</span></h3>
-                              <p style="text-decoration: line-through;">3000 دج</p>
-                           </div>
-                           <div class="description">
-                           </div>
-                           <div class="btn_main">
-                              <button class="btn-order" onclick="orderNow(
-'product 02',
-'2500',
+<!-- بداية المنتج  -->
+<div class="card">
+<h4 class="shirt_text">صاك 02</h4>
+<div class="image">
+<img src="images/p4.jpg">
+</div>
+<div class="info" dir="rtl">
+<h3>السعر : <span>1900 دج</span></h3>
+<p style="text-decoration: line-through;">2500 دج</p>
+</div>
+<div class="description">
+</div>
+<div class="btn_main">
+<button class="btn-order" onclick="orderNow(
+'صاك 02',
+'1900',
 'الوصف',
 'images/p4.jpg')">
-                                 <i class="animation"></i>أطلب الآن<i class="animation"></i>
-                              </button>
-                           </div>
-                        </div>
-                        <!-- نهاية المنتج  -->
+<i class="animation"></i>أطلب الآن<i class="animation"></i>
+ </button>
+</div>
+</div>
+ <!-- نهاية المنتج  -->
 
-                        <!-- نهاية التصنيف -->
-                     </div>
-                  </div>
-               </div>
-            </div>
-         </div>
-      </div>
-   </div>
+<!-- نهاية التصنيف -->
+</div>
+</div>
+</div>
+</div>
+</div>
+</div>
+</div>
    <!--نهاية تصنيف منتجات منوعة  -->
 
 
