--- a/index.html
+++ b/index.html
@@ -319,6 +319,30 @@
 </div>
  <!-- نهاية المنتج  -->
 
+
+<!-- بداية المنتج  -->
+<div class="card">
+<h4 class="shirt_text">ماكينة حلاقة</h4>
+<div class="image">
+<img src="images/1.jpg">
+</div>
+<div class="info" dir="rtl">
+<h3>السعر : <span>3400 دج</span></h3><p style="text-decoration: line-through;">3900 دج</p>
+</div>
+<div class="description">
+</div>
+<div class="btn_main">
+<button class="btn-order" onclick="orderNow(
+'ماكينة حلاقة',
+'3400',
+'ماكينة حلاقة الجسم والمناطق الحساسة متعددة الاستخدامات تلبي احتياجات الرجال بشكل مثالي. يأتي هذا الجهاز من العلامة التجارية KEMEI ويتميز بالعديد من المزايا المذهلة التي تجعله اختيارًا رائعًا للعناية بالشعر والجسم ------ تأتي ماكينة حلاقة المناطق الحساسة للرجال مزودة بشفرة سيراميك عالية الجودة تلتصق بالشفرة الثابتة من الفولاذ المقاوم للصدأ بزاوية حادة، وهذا يضمن عملية حلاقة فعالة وآمنة دون أي احتكاك يسبب ارتفاع درجة الحرارة ------ بفضل حد القص المتعدد الاستخدامات، حيث يمكنك ضبطه على أطوال الشعر 3/4.5/6 ملم، يمكنك تصفيف شعرك بأساليب مختلفة وتحقيق المظهر الذي ترغب فيه. كما يأتي الجهاز بتصميم مقاوم للماء بمستوى IPX7، مما يجعله مناسبًا للاستخدام تحت الدش ويمكن غسله بالكامل لسهولة التنظيف ----- ميزة تصميم الإضاءة في الجهاز، حيث يحتوي على إضاءة في الجزء الأمامي من الجهاز ----- توفر الشحن السريع والمريح بمختلف الأساليب، بينما تأتي البطارية الليثيوم عالية الجودة بقوة 600 مللي أمبير، مما يمنحك 90 دقيقة من الاستخدام المتواصل بعد شحنه لمدة ساعة ونصف ------ تقدم ماكينة حلاقة KEMEI KM-1840 أداءً قويًا وموثوقًا به للعناية بالشعر والجسم وتوفر الكثير من المزايا المهمة التي تجعلها اختيارًا ممتازًا للرجال الذين يبحثون عن أداة متعددة الاستخدامات ------ تأتي ماكينة حلاقة الأماكن الحساسة بمقاومة كاملة للماء ------ يمكن لماكينة حلاقة شعر الجسم للرجال أن تحل مشكلة شعر الجسم من أجلك ، وتحافظ على جسمك نظيفًا وصحيًا وجميلًا في كل الأوقات ------ تصميم آمن ومدروس – هل أنت قلق من جرح بشرتك أثناء الاستخدام؟ تتميز ماكينة حلاقة للجسم بشفرة سيراميك خاصة لمنع الصدأ.',
+'images/1.jpg')">
+<i class="animation"></i>أطلب الآن<i class="animation"></i>
+</button>
+</div>
+</div>
+<!-- نهاية المنتج  -->
+   
 <!-- نهاية التصنيف -->
 </div>
 </div>
